<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zero.pokedex.newMemory"
    tools:layout_editor_absoluteY="81dp">


    <Button
        android:id="@+id/logoutButton"
        android:layout_width="117dp"
        android:layout_height="0dp"
        android:layout_marginBottom="258dp"
        android:layout_marginEnd="27dp"
        android:onClick="showAlert"
        android:text="Logout"
        app:layout_constraintBottom_toTopOf="@+id/songPP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinnerBackground"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/databaseListView"
        android:layout_width="0dp"
        android:layout_height="339dp"
        android:layout_marginBottom="8dp"
        android:focusableInTouchMode="false"
        android:isScrollContainer="false"
        android:windowSoftInputMode="adjustPan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBackground" />

    <Spinner
        android:id="@+id/spinnerFonts"
        android:layout_width="101dp"
        android:layout_height="29dp"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:entries="@array/font_arrays"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/spinnerBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerBackground"
        android:layout_width="95dp"
        android:layout_height="30dp"
        android:layout_marginBottom="101dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="16dp"
        android:entries="@array/background_color_arrays"
        app:layout_constraintBottom_toTopOf="@+id/databaseListView"
        app:layout_constraintEnd_toStartOf="@+id/logoutButton"
        app:layout_constraintStart_toEndOf="@+id/spinnerFonts"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:hint="Memory Content"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/databaseListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/logoutButton" />

    <Button
        android:id="@+id/button7"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginBottom="390dp"
        android:layout_marginEnd="19dp"
        android:onClick="writeToFirebase"
        android:text="Add Memory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFonts" />

    <Button
        android:id="@+id/songPP"
        android:layout_width="154dp"
        android:layout_height="56dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="16dp"
        android:text="Play/Pause Song"
        app:layout_constraintBottom_toTopOf="@+id/btnErase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutButton" />

    <Button
        android:id="@+id/songStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="Stop Song"
        app:layout_constraintBottom_toTopOf="@+id/songPP"
        app:layout_constraintEnd_toEndOf="@+id/songPP" />

    <Button
        android:id="@+id/btnErase"
        android:layout_width="113dp"
        android:layout_height="37dp"
        android:layout_marginBottom="77dp"
        android:layout_marginEnd="16dp"
        android:onClick="showAlert2"
        android:text="Erase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songPP" />


</android.support.constraint.ConstraintLayout>
