<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zero.pokedex.Memory"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/txtMemory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="36dp"
        android:text="Memory Content"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/button1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/txtMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="34dp"
        android:text="Movie"
        app:layout_constraintStart_toStartOf="@+id/textAnimal"
        app:layout_constraintTop_toBottomOf="@+id/textAnimal"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textAnimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="63dp"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="63dp"
        android:text="Animal"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/txtMemory"
        app:layout_constraintTop_toTopOf="@+id/txtMemory"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="1dp"
        android:text="Book"
        app:layout_constraintBottom_toTopOf="@+id/textColor"
        app:layout_constraintStart_toStartOf="@+id/textColor"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="25dp"
        android:text="Color"
        app:layout_constraintStart_toStartOf="@+id/txtMovie"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        android:onClick="showAlert"
        android:text="Logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preview"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="37dp"
        android:layout_marginTop="35dp"
        android:text="Date"
        app:layout_constraintEnd_toEndOf="@+id/txtMemory"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="886dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="118dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <ImageView
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="74dp"
        android:layout_marginEnd="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:onClick="backRed"
        android:text="Red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backWhite"
        android:text="White"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backBlue"
        android:text="Blue"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="1dp"
        android:onClick="fontChange1"
        android:text="Calibri"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="53dp"
        android:onClick="fontChange2"
        android:text="Old English"
        app:layout_constraintBottom_toTopOf="@+id/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textAnimal" />

    <Button
        android:id="@+id/button6"
        android:layout_width="125dp"
        android:layout_height="0dp"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="5dp"
        android:onClick="fontChange3"
        android:text="Harlows (Italics)"
        app:layout_constraintBottom_toBottomOf="@+id/textColor"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="@+id/preview" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Button"
        android:onClick="writeToFirebase"
        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
        app:layout_constraintStart_toStartOf="@+id/logoutButton" />

</android.support.constraint.ConstraintLayout>
